# workflow

./: CMakeLists.txt
.github/workflows/: github-actions-demo.yml
CMake/: Macros.cmake
CMake/Platform/: template.cmake
demos/: CMakeLists.txt  demo.c
